--- a/bubble-web/src/main/resources/static/JobManager.html
+++ b/bubble-web/src/main/resources/static/JobManager.html
@@ -37,14 +37,14 @@
                 border
         >
             <el-table-column
-                    prop="job_NAME"
+                    prop="jobName"
                     label="任务名称"
                     sortable
                     show-overflow-tooltip>
             </el-table-column>
 
             <el-table-column
-                    prop="job_GROUP"
+                    prop="jobGroup"
                     label="任务所在组"
                     sortable>
             </el-table-column>
@@ -74,31 +74,31 @@
             </el-table-column>
 
             <el-table-column
-                    prop="job_CLASS_NAME"
+                    prop="jobClassName"
                     label="任务类名"
                     sortable>
             </el-table-column>
 
             <el-table-column
-                    prop="trigger_NAME"
+                    prop="triggerName"
                     label="触发器名称"
                     sortable>
             </el-table-column>
 
             <el-table-column
-                    prop="trigger_GROUP"
+                    prop="triggerGroup"
                     label="触发器所在组"
                     sortable>
             </el-table-column>
 
             <el-table-column
-                    prop="cron_EXPRESSION"
+                    prop="cronExpression"
                     label="表达式"
                     sortable>
             </el-table-column>
 
             <el-table-column
-                    prop="time_ZONE_ID"
+                    prop="timeZoneId"
                     label="时区"
                     sortable>
             </el-table-column>
@@ -245,8 +245,8 @@
             //立即执行
             handleExecute: function (index, row) {
                 this.$http.post('job/triggerJob', {
-                    "jobClassName": row.job_NAME,
-                    "jobGroupName": row.job_GROUP
+                    "jobClassName": row.jobName,
+                    "jobGroupName": row.jobGroup
                 }, {emulateJSON: true}).then(function (res) {
                     this.loadData(this.currentPage, this.pagesize);
                 }, function () {
@@ -258,8 +258,8 @@
             //单行删除
             handleDelete: function (index, row) {
                 this.$http.post('job/deleteSingleJob', {
-                    "jobClassName": row.job_NAME,
-                    "jobGroupName": row.job_GROUP
+                    "jobClassName": row.jobName,
+                    "jobGroupName": row.jobGroup
                 }, {emulateJSON: true}).then(function (res) {
                     this.loadData(this.currentPage, this.pagesize);
                 }, function () {
@@ -270,8 +270,8 @@
             //暂停任务
             handlePause: function (index, row) {
                 this.$http.post('job/pauseSingleJob', {
-                    "jobClassName": row.job_NAME,
-                    "jobGroupName": row.job_GROUP
+                    "jobClassName": row.jobName,
+                    "jobGroupName": row.jobGroup
                 }, {emulateJSON: true}).then(function (res) {
                     this.loadData(this.currentPage, this.pagesize);
                 }, function () {
@@ -282,8 +282,8 @@
             //恢复任务
             handleResume: function (index, row) {
                 this.$http.post('job/resumeSingleJob', {
-                    "jobClassName": row.job_NAME,
-                    "jobGroupName": row.job_GROUP
+                    "jobClassName": row.jobName,
+                    "jobGroupName": row.jobGroup
                 }, {emulateJSON: true}).then(function (res) {
                     this.loadData(this.currentPage, this.pagesize);
                 }, function () {
@@ -319,8 +319,8 @@
             handleUpdate: function (index, row) {
                 console.log(row)
                 this.updateFormVisible = true;
-                this.updateform.jobName = row.job_CLASS_NAME;
-                this.updateform.jobGroup = row.job_GROUP;
+                this.updateform.jobName = row.jobClassName;
+                this.updateform.jobGroup = row.jobGroup;
             },
 
             //更新任务
